<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:id="@+id/conteudo"
    android:background="@drawable/bg_principal" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_marginTop="0dp"
        android:background="@color/SalmaoEscuro"
        android:gravity="top"
        android:orientation="vertical" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="100dp"
       	android:layout_marginTop="0dp"
       	android:orientation="vertical" >

        <TextView
            android:id="@+id/label_nome"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginTop="10dp"
			style="@style/LabelInput"
            android:text="@string/label_nome"
            android:textSize="@dimen/label_input"
             />

        <EditText
            android:id="@+id/input_nome"
            android:layout_width="250dp"
            android:layout_height="45dp"
            android:inputType="text"
            android:maxLength="15"
            android:padding="10dp"
            style="@style/Input"
            android:background="@drawable/style_input" >
	
            <requestFocus />
        </EditText>
        
    </LinearLayout>
	
     <LinearLayout
        android:layout_width="250dp"
        android:layout_height="200dp"
       	android:layout_marginTop="0dp"
       	android:orientation="vertical" >
        
    <LinearLayout  
        android:layout_width="fill_parent"
        android:layout_height="25dp">
	   <TextView
	        android:id="@+id/label_comentario"
	        android:layout_width="wrap_content"
	        android:layout_height="25dp"
	        style="@style/LabelInput"
	        android:text="@string/label_comentario"
	        android:textSize="@dimen/label_input"
	         />
	  
   </LinearLayout>
	
   	<EditText
   	    android:inputType="textMultiLine"
   	    android:gravity="top"
        android:id="@+id/input_comentario"
        android:maxLength="140"
        android:layout_width="250dp"
        android:layout_height="150dp"
        style="@style/Input"
        android:background="@drawable/style_input"
        android:padding="10dp"
         />
   </LinearLayout>

   <LinearLayout
       style="@style/Button"
       android:id="@+id/botao_comentar_completo"
       android:layout_width="200dp"
       android:layout_height="50dp"
        >

       <Button
           android:id="@+id/botao_comentar"
           android:layout_weight="0.7"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_marginBottom="10dp"
           android:layout_marginTop="10dp"
           android:layout_marginLeft="30dp"
           android:textSize="19dp"
           android:background="@drawable/shape_0_border"
           android:text="@string/label_comentar"
           android:textColor="@color/White"
          	 />

       <ImageView
           android:id="@+id/img_lapis_comentar"
           android:layout_width="wrap_content"
           android:layout_marginRight="5dp"
           android:contentDescription="@string/label_pesquisar"
           android:layout_height="match_parent"
           android:src="@drawable/ic_comentar" />
   </LinearLayout>
	<LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:alpha="1.0"
        android:id="@+id/layout_ads"
        android:orientation="vertical"
        android:layout_gravity="bottom"
       	android:gravity="bottom" >
        
    </LinearLayout>
</LinearLayout>
